Add ParameterizedStringFormat and JdbcDatabaseMetaData